--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,10 @@
         <div id="info">
             <div class="infos">
                 <h2>Portfólio</h2>             
-                <p>
-                    http://projetotecnilogiadivonir.infinityfreeapp.com
-                </p>
+                <br>
+                   <ul class="list-link">
+                        <li><a class="text2" href="http://projetotecnilogiadivonir.infinityfreeapp.com">http://projetotecnilogiadivonir.infinityfreeapp.com</a></li>
+                    </ul> 
              
             </div>
         </div>   
